# 3dmd-mesh-projector

./: .gitignore  README.md  main.py  pyproject.toml
src/: calibration.py  cli.py  dataset.py  obj_project.py  view_mesh.py
