[project]
name = "3dmd-mesh-projector"
version = "0.1.0"
description = "3D Mesh Projection tool for 3dMD multi-camera system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "open3d>=0.18.0",
    "pillow>=9.5.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
3dmd-mesh-projector = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
